--- a/endeCRYPTION/endeCRYPTION.vcxproj.filters
+++ b/endeCRYPTION/endeCRYPTION.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="endeCRYPTION.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="funkcje.cpp">
+      <Filter>Pliki zasobów</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="plik.h">
